# UCTP

./: .codecov.yml  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  docker-compose.yml  uctp_web_app.pro
.github/workflows/: CCI.yml
config/: application.ini  cache.ini  database.ini  development.ini  internet_media_types.ini  mongodb.ini  redis.ini
controllers/: applicationcontroller.cpp  applicationcontroller.h  blockcontroller.cpp  blockcontroller.h  classroomcontroller.cpp  classroomcontroller.h  controllers.pro  groupcontroller.cpp  groupcontroller.h  subjectcontroller.cpp  subjectcontroller.h  teachercontroller.cpp  teachercontroller.h  timeslotcontroller.cpp  timeslotcontroller.h  timetablecontroller.cpp  timetablecontroller.h
db/: content.uml  init.sql  uctpdb.sqlite
helpers/: applicationhelper.h  helpers.pro
models/: CMakeLists.txt  block.cpp  block.h  classroom.cpp  classroom.h  group.cpp  group.h  models.pro  subject.cpp  subject.h  teacher.cpp  teacher.h  timeslot.cpp  timeslot.h  timetable.cpp  timetable.h
models/sqlobjects/: blockobject.h  classroomobject.h  groupobject.h  subjectobject.h  teacherobject.h  timeslotobject.h  timetableobject.h
models/utility/: ThreadPool.cpp  ThreadPool.hpp  ThreadPoolImpl.hpp
project/: CMakeLists.txt
project/sources/: main.cpp
scripts/: checks.sh  linters.sh  static_analyze.sh  tests.sh
src/: CMakeLists.txt  src.pro
src/algorithm/: CMakeLists.txt
src/algorithm/genetic_algorithm/: CMakeLists.txt
src/algorithm/genetic_algorithm/include/: genetic_algorithm.hpp
src/algorithm/genetic_algorithm/source/: genetic_algorithm.cpp
src/algorithm/include/: data_for_run.hpp  entities.hpp  genetic_algorithm.hpp  scheduleMaker.hpp
src/algorithm/sources/: genetic_algorithm.cpp  scheduleMaker.cpp  source.cpp
src/application_server/: CMakeLists.txt  main.cpp
src/application_server/include/: Application.hpp
src/application_server/include/commands/: CalculateLessonCommand.hpp  CreateAuditoryCommand.hpp  CreateGroupCommand.hpp  CreateStudyStreamCommand.hpp  CreateSubjectCommand.hpp  CreateTeacherCommand.hpp  DeleteAuditoryCommand.hpp  DeleteGroupCommand.hpp  DeleteStudyStreamCommand.hpp  DeleteSubjectCommand.hpp  DeleteTeacherCommand.hpp  IControllerCommand.hpp  SearchAuditoryCommand.hpp  SearchGroupCommand.hpp  SearchLessonCommand.hpp  SearchStudyStreamCommand.hpp  SearchSubjectCommand.hpp  SearchTeacherCommand.hpp  UpdateAuditoryCommand.hpp  UpdateGroupCommand.hpp  UpdateStudyStreamCommand.hpp  UpdateSubjectCommand.hpp  UpdateTeacherCommand.hpp
src/application_server/include/controllers/: Controller.hpp  DefaultCommandRouter.hpp  IControllerCommandRouter.hpp
src/application_server/include/datatypes/: ControllerContext.hpp  DBContext.hpp  HttpContext.hpp  ModelContext.hpp
src/application_server/include/db_types/: entities.hpp
src/application_server/include/models/: AbstractModel.hpp  AuditoryModel.hpp  GroupModel.hpp  ScheduleModel.hpp  StudyStreamModel.hpp  SubjectModel.hpp  TeacherModel.hpp
src/application_server/include/tools/: AbstractDBConnector.hpp  FastCGIProcessor.hpp  ICGIProcessor.hpp  PGConnector.hpp
src/application_server/include/views/: AbstractView.hpp  UCTPView.hpp
src/application_server/sources/: source.cpp
src/example_dir/: CMakeLists.txt
src/http_server/: CMakeLists.txt  main.cpp
src/http_server/sources/: source.cpp
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  tests.cpp
tests/unit_tests/algorithm_tests/: CMakeLists.txt  genetic_algorithm_tests.cpp  scheduleMakerTests.cpp
tests/unit_tests/algorithm_tests/builders_tests/: CMakeLists.txt  builders_tests.cpp
tests/unit_tests/algorithm_tests/constructors_tests/: CMakeLists.txt  constructors_tests.cpp
tests/unit_tests/algorithm_tests/schedule_make_tests/: CMakeLists.txt  schedule_make_tests.cpp
tests/unit_tests/genetic_algorithm_tests/: CMakeLists.txt  genetic_algorithm_tests.cpp
views/_src/: _src.pro
views/block/: create.erb  index.erb  save.erb  show.erb
views/classroom/: create.erb  index.erb  save.erb  show.erb
views/group/: create.erb  index.erb  save.erb  show.erb
views/subject/: create.erb  index.erb  save.erb  show.erb
views/teacher/: create.erb  index.erb  save.erb  show.erb
views/timeslot/: create.erb  index.erb  save.erb  show.erb
views/timetable/: create.erb  index.erb  save.erb  show.erb
